--- a/JDC/Areas/Account/Views/Manage/_Layout.cshtml
+++ b/JDC/Areas/Account/Views/Manage/_Layout.cshtml
@@ -9,7 +9,7 @@
     }
 }
 
-<div>
+<div class="pt-4">
     <div class="row">
         <div class="col-md-3">
             <partial name="_ManageNav"/>
