--- a/JDC/Views/Home/Index.cshtml
+++ b/JDC/Views/Home/Index.cshtml
@@ -1,8 +1,61 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Главная";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <div class="row align-items-center" style="height: 91vh;">
+        <div class="col-12 col-md-5 col-lg-6 order-md-2">
+            <img src="~/images/Preview.png" class="wow fadeInRight m-auto d-block mx-lg-auto img-fluid" alt="Preview" loading="lazy" height="450" width="425">
+        </div>
+        <div class="col-12 col-md-7 col-lg-6 order-md-1 wow fadeInLeft">
+            <h1 class="display-5 fw-bold lh-1 mb-3">Добро пожаловать в <span class="text-primary">JDC</span>.</h1>
+            <p class="lead">JDC - это единая платформа электронных сервисов для образования. JDC помогает учащимся улучшать показатели в учебе. Родителям - быть в курсе того, как обстоят дела у ребенка с учёбой, а учителям и администрации - сократить бумажную работу и упростить образовательный процесс.</p>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                <a class="btn btn-primary btn-lg px-4 mr-3" asp-area="Account" asp-controller="Auth" asp-action="Register">Зарегестрировать</a>
+                <a class="btn btn-primary-soft btn-lg px-4" asp-action="Documentation">Документация</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="row" style="height: 88vh;">
+        <div class="col-lg-8 mx-auto">
+            <h2 class="text-center mb-4">Пользователи</h2>
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                    <li data-target="#myCarousel" data-slide-to="3"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="img-box"><img src="~/images/home/administration.webp" alt=""></div>
+                        <p class="testimonial">Администрации школ и Министерство знают текущее состояние дел и могут реагировать оперативнее</p>
+                        <p class="overview"><b>Администрации</b></p>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="img-box"><img style="border-radius: initial;" src="~/images/home/teacher.webp" alt=""></div>
+                        <p class="testimonial">Учителя знают информацию об учащихся, видят статистику и тенденции успеваемости.</p>
+                        <p class="overview"><b>Учителям</b></p>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="img-box"><img src="~/images/home/parents.webp" alt=""></div>
+                        <p class="testimonial">Родители знают отметки, задания, статистику посещений и успеваемости своих детей.</p>
+                        <p class="overview"><b>Родителям</b></p>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="img-box"><img src="~/images/home/student.webp" alt=""></div>
+                        <p class="testimonial">Учащиеся знают домашние задания, темы, актуальное расписание занятий и ничего не забывают.</p>
+                        <p class="overview"><b>Студентам</b></p>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+                    <i class="fa fa-angle-left"></i>
+                </a>
+                <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+                    <i class="fa fa-angle-right"></i>
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
