--- a/JDC/Views/Shared/_MenuPartial.cshtml
+++ b/JDC/Views/Shared/_MenuPartial.cshtml
@@ -34,7 +34,7 @@
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-dark" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Демо</a>
             <div class="dropdown-menu" aria-labelledby="dropdown03">
-                <a class="dropdown-item" asp-area="" asp-controller="Students" asp-action="Journal" asp-route-groupId="-1" asp-route-lessonId="0">Пример журнала</a>
+                <a class="dropdown-item" asp-area="" asp-controller="Groups" asp-action="Journal" asp-route-groupId="-1" asp-route-lessonId="0">Пример журнала</a>
                 <a class="dropdown-item" asp-area="" asp-controller="Chats" asp-action="Index">Пример чата</a>
                 <hr class="dropdown-divider">
                 <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Documentation">Документация</a>
