--- a/JDC/Views/Groups/Journal.cshtml
+++ b/JDC/Views/Groups/Journal.cshtml
@@ -10,9 +10,9 @@
 
 @if (Model.Students.Count == 0)
 {
-<div class="alert alert-warning" role="alert">
-     Упс, список студентов пуст.
-</div>
+    <div class="alert alert-warning" role="alert">
+         Упс, список студентов пуст.
+    </div>
 }
 else
 {
@@ -27,7 +27,7 @@ else
                <tbody>
                    @for (int i = 0; i < Model.Students.Count; i++)
                    {
-                       <tr>
+                       <tr id="tr1@(i)">
                            <td>
                                <b>@(i + 1)</b>
                            </td>
@@ -48,7 +48,7 @@ else
                <tbody>
                    @for (int i = 0; i < Model.Students.Count; i++)
                    {
-                       <tr>
+                        <tr id="tr2@(i)">
                            <td>
                                @(Model.Students[i].User.LongName)
                            </td>
@@ -68,7 +68,7 @@ else
             </button>
         </div>
 
-        <div class="col scroll-table" style="padding: 0;">
+        <div id="gradeTable" class="col scroll-table" style="padding: 0;">
             <table class="journal-table" style="text-align: center; display: inline-block;">
             <thead>
                 <tr style="height: 25px;">
@@ -94,22 +94,26 @@ else
                     currentDate = new DateTime(DateTime.Now.Year, 9, 1);
                 }
 
-                @foreach (Student student in Model.Students)
+                @for (int i = 0; i < Model.Students.Count; i++)
                 {
-                    <tr>
+                    <tr id="tr3@(i)">
                         @for (int j = 1; j <= countdDay; j++, currentDate = currentDate.AddDays(1))
                         {
                              <td class="cell">
-                                <button type="button" class="btn" data-toggle="modal" data-target="#setGradeModal" data-title="@($"{currentDate:dddd}, {currentDate:M}")" data-studentid="@(student.Id)" data-date="@currentDate.ToString("ddMMyyyy")">
-                                    @{
-                                        Grade grade = student.Grades.Where(grade => grade.BillingDate.Equals(currentDate)).FirstOrDefault();
-                                        
-                                        if (grade is not null)
-                                        {
+                                @{
+                                    Grade grade = Model.Students[i].Grades.Where(grade => grade.BillingDate.Equals(currentDate)).FirstOrDefault();
+                                    
+                                    if (grade is not null)
+                                    {
+                                        <button type="button" class="btn" data-toggle="modal" data-gradeid="@grade.Id" data-target="#setGradeModal" data-title="@($"{currentDate:dddd}, {currentDate:M}")" data-studentid="@(Model.Students[i].Id)" data-date="@currentDate.ToString("ddMMyyyy")">
                                             @grade.Value
-                                        }
+                                        </button>
                                     }
-                                </button>
+                                    else
+                                    {
+                                        <button type="button" class="btn" data-toggle="modal" data-target="#setGradeModal" data-title="@($"{currentDate:dddd}, {currentDate:M}")" data-studentid="@(Model.Students[i].Id)" data-date="@currentDate.ToString("ddMMyyyy")"></button>
+                                    }
+                                }
                             </td>
                         }
                     </tr>
@@ -130,22 +134,20 @@ else
                 </button>
             </div>
             <div class="modal-body">
-                <form>
-                    <div class="form-group">
-                        <label for="recipient-name" class="form-control-label">Оценка:</label>
-                        <input type="text" class="form-control" id="grade">
-                    </div>
-                    <div class="form-group">
-                        <label for="message-text" class="form-control-label">Замечания:</label>
-                        <textarea class="form-control" id="comment"></textarea>
-                    </div>
-                    <div class="form-check">
-                        <label class="form-check-label">
-                            <input id="absent" class="form-check-input" type="checkbox" value="">
-                            Отсутствие на уроке
-                        </label>
-                    </div>
-                </form>
+                <div class="form-group">
+                    <label for="recipient-name" class="form-control-label">Оценка:</label>
+                    <input type="text" class="form-control" id="grade">
+                </div>
+                <div class="form-group">
+                    <label for="message-text" class="form-control-label">Замечания:</label>
+                    <textarea class="form-control" id="comment"></textarea>
+                </div>
+                <div class="form-check">
+                    <label class="form-check-label">
+                        <input id="absent" class="form-check-input" type="checkbox" value="">
+                        Отсутствие на уроке
+                    </label>
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
