Added functionality for adding a lesson

--- a/JDC/Views/Shared/_Layout.cshtml
+++ b/JDC/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
 </head>
-<body>
+<body class="p-0">
     <div id="preloader-block">
         <img id="preloader" src="~/images/preloader.gif" alt="Загрузка ...">
     </div>
