--- a/JDC/Views/Groups/Journal.cshtml
+++ b/JDC/Views/Groups/Journal.cshtml
@@ -6,16 +6,28 @@
     int countdDay = DateTime.DaysInMonth(currentDate.Year, currentDate.Month);
     Func<IEnumerable<Grade>, string> getAverage = (grades) =>
     {
-        double? average = grades.Where(grade => grade.Value is not null && grade.LessonId == ViewBag.LessonId)
+        double? average = grades?.Where(grade => grade.Value is not null && grade.Lesson?.DisciplineId == ViewBag.DisciplineId)
             .Average(grade => grade.Value);
 
         return average.HasValue ? average.ToString() : "-";
     };
+
+    Func<DateTime, string> getLessonContent = (date) =>
+    {
+        Lesson currentLesson = Model.Disciplines?.FirstOrDefault(discipline => discipline.Id == ViewBag.DisciplineId)?
+            .Lessons?.FirstOrDefault(lesson => lesson.Date == date);
+
+        return currentLesson is null ? "<b>Без информации</b>" : $"<b>Тема урока:</b> {currentLesson.Theme}<br/><b>Домашнее задание:</b> {currentLesson.Homework}<br/>";
+    };
 }
 
-<h3 style="margin: 10px -15px 25px -15px;" id="viewtitle" data-groupdId="@Model.Id" data-lessonId="@ViewData["LessonID"]">
-    Группа: @(Model.Name), дисциплина: <select id="speciality" asp-items="@(new SelectList(Model.Lessons, "Id", "Title"))"></select>
+<h3 style="margin: 10px -15px 25px -15px;">
+    Группа: @(Model.Name), дисциплина: <select id="discipline" asp-items="@(new SelectList(Model.Disciplines, "Id", "Title"))"></select>
 </h3>
+
+<a class="btn-floating btn-lg add-btn waves-effect" data-toggle="modal" data-target="#createLessonModal">
+    <i class="fa fa-plus" aria-hidden="true"></i>
+</a>
 
 @if (Model.Students.Count == 0)
 {
@@ -64,7 +76,7 @@ else
                            <td id="@(Model.Students[i].Id)average">
                                @(getAverage(Model.Students[i].Grades))
                            </td>
-                       </tr>
+                        </tr>
                    }
                </tbody>
            </table>
@@ -87,12 +99,12 @@ else
                 <tr style="height: 25px;">
                     @for (int j = 1; j <= countdDay; j++, currentDate = currentDate.AddDays(1))
                     {
-                        <th>
-                            @currentDate.ToString("ddd"), @(j)
-                            <button type="button" class="w-13 btn border-0 p-0 text-white position-relative" data-date="@currentDate.ToString("ddMMyyyy")">
-                                <i class="doc-icon fa fa-file-text-o" aria-hidden="true"></i>
-                            </button>
-                        </th>
+                    <th>
+                        @currentDate.ToString("ddd"), @(j)
+                        <a tabindex="0" class="w-13 c-pointer btn border-0 p-0 text-white position-relative" role="button" data-html="true" data-toggle="popover" data-trigger="focus" title="Информация урока" data-content="@(getLessonContent(currentDate))">
+                            <i class="doc-icon fa fa-file-text-o" aria-hidden="true"></i>
+                        </a>
+                    </th>
                     }
                 </tr>
             </thead>
@@ -109,7 +121,7 @@ else
                         {
                              <td class="cell">
                                 @{
-                                    Grade grade = Model.Students[i].Grades.Where(grade => grade.BillingDate.Equals(currentDate) && grade.LessonId == ViewBag.LessonId).FirstOrDefault();
+                                    Grade grade = Model.Students[i]?.Grades?.FirstOrDefault(grade => grade.BillingDate.Equals(currentDate) && grade.Lesson?.DisciplineId == ViewBag.DisciplineId);
                                     
                                     if (grade is not null)
                                     {
@@ -136,7 +148,7 @@ else
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="modalTitle">Сегодня</h4>
+                <h4 class="modal-title">Сегодня</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -165,16 +177,50 @@ else
     </div>
 </div>
 
+<div class="modal fade" id="createLessonModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="modalTitle">Добавление урока</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label for="recipient-name" class="form-control-label">Тема:</label>
+                    <input type="text" class="form-control" id="theme">
+                </div>
+                <div class="form-group">
+                    <label for="recipient-name" class="form-control-label">Длительность:</label>
+                    <select id="lessonDuration">
+                        <option value="0">Один час</option>
+                        <option value="1" selected>Пара</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="message-text" class="form-control-label">Домашнее задание:</label>
+                    <input type="text" class="form-control" id="homework">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+                <button id="createLessonButton" type="button" class="btn btn-primary">Добавить</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script type="text/javascript">
     let group = JSON.parse('@Json.Serialize(@Model)');
-    let lessonId = @ViewBag.LessonId;
+    let disciplineId = @ViewBag.DisciplineId;
 
-    $(window).on('load', function () {
-        $("#speciality").val(@ViewBag.LessonId);
+    $(window).on('load', function () { 
+        $("#discipline").val(disciplineId);
     });
 
-    $('#speciality').change(function () {
-        var url = '@Html.Raw(Url.Action("Journal", "Groups", new { groupId = -1, lessonId = "__lesson__" }))';
-        window.location.href = url.replace('__lesson__', $("#speciality").val());
+    $('#discipline').change(function () {
+        var url = '@Html.Raw(Url.Action("Journal", "Groups", new { groupId = -1, lessonId = "__discipline__" }))';
+        window.location.href = url.replace('__discipline__', $("#discipline").val());
     });
 </script>
