--- a/JDC/Areas/Account/Views/Manage/Index.cshtml
+++ b/JDC/Areas/Account/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model  JDC.Areas.Account.Models.IndexModel
+﻿@model  IndexModel
 @{
     ViewData["Title"] = "Profile";
     ViewData["ActivePage"] = ManageNavPages.Index;
