--- a/JDC/Areas/Account/Views/Auth/Login.cshtml
+++ b/JDC/Areas/Account/Views/Auth/Login.cshtml
@@ -1,10 +1,8 @@
-﻿@using JDC.Areas.Account.Models
-@model LoginModel
+﻿@model LoginModel
 
 @{
     ViewData["Title"] = "Log in";
 }
-
 
 <div class="row justify-content-center align-items-center vh-82">
     <div class="col-sm-9 col-md-6 col-lg-5">
@@ -18,28 +16,23 @@
                     <form id="account" method="post">
                         <div asp-validation-summary="All" class="text-danger"></div>
                         <div class="form-group">
-                            <label asp-for="@Model.UserName"></label>
-                            <input asp-for="@Model.UserName" class="form-control" />
+                            <label class="other_info" asp-for="Username"></label>
+                            <input asp-for="Username" class="form-control" />
                         </div>
                         <div class="form-group">
-                            <label asp-for="@Model.Password"></label>
-                            <input asp-for="@Model.Password" class="form-control" />
+                            <label class="other_info" asp-for="Password"></label>
+                            <input asp-for="Password" class="form-control" />
                         </div>
                         <div class="form-group">
                             <div class="checkbox">
-                                <label asp-for="@Model.RememberMe">
-                                    <input asp-for="@Model.RememberMe" />
+                                <label asp-for="RememberMe">
+                                    <input asp-for="RememberMe" />
                                     @Html.DisplayNameFor(m => m.RememberMe)
                                 </label>
                             </div>
                         </div>
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary btn-block text-center rounded-pill">Log in</button>
-                        </div>
-                        <div class="form-group">
-                            <p>
-                                <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                            </p>
                         </div>
                     </form>
                 </section>
@@ -52,3 +45,4 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+
