Added functionality for accepting a registration request

--- a/JDC/Areas/Admin/Views/Requests/Index.cshtml
+++ b/JDC/Areas/Admin/Views/Requests/Index.cshtml
@@ -28,7 +28,7 @@ else
             <tbody>
                 @for (int i = 0; i < Model.Count(); i++)
                 {
-                    <tr>
+                    <tr id="request@(Model[i].Id)">
                         <td class="pl-40">
                             @(i + 1)
                         </td>
@@ -56,18 +56,18 @@ else
                                     <i class="fa fa-ellipsis-v"></i>
                                 </a>
                                 <div class="dropdown-menu off-animation" aria-labelledby="triggerId2">
-                                    <a class="dropdown-item text-success" asp-action="Accept" asp-route-id="@Model[i].Id">
+                                    <button class="dropdown-item text-success request-action" type="button" data-action="Accept" data-id="@Model[i].Id">
                                         <i class="fa fa-list"></i>
                                         Подтвердить
-                                    </a>                                  
+                                    </button>
                                     <a class="dropdown-item text-primary" asp-action="Details" asp-route-id="@Model[i].Id">
                                         <i class="fa fa-info-circle"></i>
                                         Подробнее
                                     </a>
-                                    <a class="dropdown-item text-danger" asp-action="Delete" asp-route-id="@Model[i].Id">
+                                    <button class="dropdown-item text-danger request-action" type="button" data-action="Delete" data-id="@Model[i].Id">
                                         <i class="fa fa-trash"></i>
                                         Удалить
-                                    </a>
+                                    </button>
                                 </div>
                             </div>
                         </td>
