--- a/JDC/wwwroot/css/site.css
+++ b/JDC/wwwroot/css/site.css
@@ -12,6 +12,17 @@ html {
     font-size: 14px;
 }
 
+b, strong {
+    font-weight: 700 !important;
+}
+
+.details-block p {
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #d5dadb;
+    letter-spacing: 0.03rem;
+}
+
 a.dropdown-item:focus {
     color: #fff !important;
 }
