--- a/JDC/Views/Shared/_MenuPartial.cshtml
+++ b/JDC/Views/Shared/_MenuPartial.cshtml
@@ -5,7 +5,7 @@
             <a class="nav-link text-dark" asp-area="Admin" asp-controller="Requests" asp-action="Index">Заявки</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Institutions" asp-action="Index">Пользователи</a>
+            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Users" asp-action="Index">Пользователи</a>
         </li>
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="Institutions" asp-action="Index">Учреждения</a>
