--- a/JDC/Views/Shared/_Layout.cshtml
+++ b/JDC/Views/Shared/_Layout.cshtml
@@ -44,6 +44,7 @@
     </footer>
 
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/Chart.js/chart.min.js"></script>
     <script src="~/lib/wow-js/wow.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
