--- a/JDC/Areas/Admin/Views/Users/Index.cshtml
+++ b/JDC/Areas/Admin/Views/Users/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@model List<User>
+@inject UserManager<User> userManager
 
-@{ ViewData["Title"] = "Список пользователей"; }
+@{ 
+    ViewData["Title"] = "Список пользователей"; 
+}
 
 <h1>Пользователи</h1>
 
@@ -55,60 +58,67 @@ else
             <thead>
                 <tr>
                     <th class="pl-40">№</th>
-                    <th>Username</th>
-                    <th>Номер телефона</th>
-                    <th>Email</th>
+                    <th>Пользователь</th>
+                    <th>Телефон</th>
+                    <th>Роль</th>
                     <th class="text-center">Статус</th>
                     <th class="text-center">Действия</th>
                 </tr>
             </thead>
             <tbody>
-                @for (int i = 0; i < Model.Count(); i++)
+                @for (int i = 0; i < Model.Count; i++)
                 {
-                    <tr id="user@(Model[i].Id)">
-                        <td class="pl-40">
-                            @(i + 1)
-                        </td>
-                        <td>
-                            @Model[i].UserName
-                        </td>
-                        <td>
-                            @Model[i].PhoneNumber
-                        </td>
-                        <td>
-                            @Model[i].Email
-                        </td>
-                        <td class="text-center">
-                            <button class="btn change-status-button" id="change@(Model[i].Id)">
-                                @if (Model[i].LockoutEnd > DateTime.Now)
-                                {
-                                    <i class="fa fa-lock text-danger"></i>
-                                }
-                                else
-                                {
-                                    <i class="fa fa-unlock text-success"></i>
-                                }
-                            </button>
-                        </td>
-                        <td class="text-center">
-                            <div class="dropdown open off-animation">
-                                <a href="#!" class="px-2" id="triggerId2" data-toggle="dropdown" aria-haspopup="true"
-                                   aria-expanded="false">
-                                    <i class="fa fa-ellipsis-v"></i>
-                                </a>
-                                <div class="dropdown-menu off-animation" aria-labelledby="triggerId2">
-                                    <a class="dropdown-item text-primary" asp-action="Details" asp-route-id="@Model[i].Id">
-                                        <i class="fa fa-info-circle"></i>
-                                        Подробнее
-                                    </a>
-                                    <button class="dropdown-item text-danger delete-user-button" type="button" data-action="Delete" data-id="@Model[i].Id">
-                                        <i class="fa fa-trash"></i>
-                                        Удалить
-                                    </button>
-                                </div>
+                <tr id="user@(Model[i].Id)">
+                    <td class="pl-40">
+                        @(i + 1)
+                    </td>
+                    <td>
+                        <div class="user-info">
+                            <img src="@(Model[i].Avatar ?? "/images/avatar7.png")" class="rounded-circle" alt="avatar">
+
+                            <div class="user-info-body">
+                                <h5 class="mb-0">@Model[i].UserName</h5>
+                                <p class="text-muted mb-0">@Model[i].Email</p>
                             </div>
-                        </td>
-                    </tr>
+                        </div>
+                    </td>
+                    <td>
+                        @Model[i].PhoneNumber
+                    </td>
+                    <td>
+                        @string.Join(", ", await userManager.GetRolesAsync(Model[i]))
+                    </td>
+                    <td class="text-center">
+                        <button class="btn change-status-button" id="change@(Model[i].Id)">
+                            @if (Model[i].LockoutEnd > DateTime.Now)
+                            {
+                                <i class="fa fa-lock text-danger"></i> 
+                            }
+                            else
+                            {
+                                <i class="fa fa-unlock text-success"></i>
+                            }
+                        </button>
+                    </td>
+                    <td class="text-center">
+                        <div class="dropdown open off-animation">
+                            <a href="#!" class="px-2" id="triggerId2" data-toggle="dropdown" aria-haspopup="true"
+                               aria-expanded="false">
+                                <i class="fa fa-ellipsis-v"></i>
+                            </a>
+                            <div class="dropdown-menu off-animation" aria-labelledby="triggerId2">
+                                <a class="dropdown-item text-primary" asp-action="Details" asp-route-id="@Model[i].Id">
+                                    <i class="fa fa-info-circle"></i>
+                                    Подробнее
+                                </a>
+                                <button class="dropdown-item text-danger delete-user-button" type="button" data-action="Delete" data-id="@Model[i].Id">
+                                    <i class="fa fa-trash"></i>
+                                    Удалить
+                                </button>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
                 }
             </tbody>
         </table>
