--- a/JDC/wwwroot/css/site.css
+++ b/JDC/wwwroot/css/site.css
@@ -318,28 +318,27 @@ html {
     max-width: 100% !important;
 }
 
-.card {
+.institution-card {
     margin: 10px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
-    width: 300px;
 }
 
-.institute_card_dropdown {
+.institute-card-dropdown {
     text-decoration: none;
     color: #fff;
     font-size: 1.3rem;
 }
 
-    .institute_card_dropdown:hover {
-        text-decoration: none;
-        color: #fff;
-    }
+.institute-card-dropdown:hover {
+    text-decoration: none;
+    color: #fff;
+}
 
-    .institute_card_dropdown > i {
-        margin: auto;
-    }
+.institute-card-dropdown > i {
+    margin: auto;
+}
 
 .card-header img {
     width: 100%;
