--- a/JDC/Views/_ViewImports.cshtml
+++ b/JDC/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using JDC
 @using JDC.Common.Enums
 @using JDC.Common.Entities
+@using JDC.Common.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
