Fixed css classes naming

--- a/JDC/Areas/Account/Views/Auth/Register.cshtml
+++ b/JDC/Areas/Account/Views/Auth/Register.cshtml
@@ -13,22 +13,22 @@
             <div asp-validation-summary="All" class="text-danger pl-3"></div>
 
             <div class="form-group">
-                <label class="other_info" asp-for="@Model.DirectorName"></label>
+                <label class="other-info" asp-for="@Model.DirectorName"></label>
                 <input asp-for="@Model.DirectorName" class="form-control" />
             </div>
 
             <div class="form-group">
-                <label class="other_info" asp-for="@Model.PhoneNumber"></label>
+                <label class="other-info" asp-for="@Model.PhoneNumber"></label>
                 <input asp-for="@Model.PhoneNumber" class="form-control" />
             </div>
 
             <div class="form-group">
-                <label class="other_info" asp-for="@Model.Email"></label>
+                <label class="other-info" asp-for="@Model.Email"></label>
                 <input asp-for="@Model.Email" class="form-control" />
             </div>
 
             <div class="form-group">
-                <label class="other_info" asp-for="@Model.WebsiteLink"></label>
+                <label class="other-info" asp-for="@Model.WebsiteLink"></label>
                 <input asp-for="@Model.WebsiteLink" class="form-control" />
             </div>
 
