--- a/JDC/Areas/Account/Views/Auth/Login.cshtml
+++ b/JDC/Areas/Account/Views/Auth/Login.cshtml
@@ -16,11 +16,11 @@
                     <form id="account" method="post">
                         <div asp-validation-summary="All" class="text-danger"></div>
                         <div class="form-group">
-                            <label class="other_info" asp-for="Username"></label>
+                            <label class="other-info" asp-for="Username"></label>
                             <input asp-for="Username" class="form-control" />
                         </div>
                         <div class="form-group">
-                            <label class="other_info" asp-for="Password"></label>
+                            <label class="other-info" asp-for="Password"></label>
                             <input asp-for="Password" class="form-control" />
                         </div>
                         <div class="form-group">
