--- a/JDC/Areas/Account/Views/Manage/ChangePassword.cshtml
+++ b/JDC/Areas/Account/Views/Manage/ChangePassword.cshtml
@@ -10,17 +10,17 @@
         <form id="change-password-form" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label class="other_info" asp-for="Input.OldPassword"></label>
+                <label class="other-info" asp-for="Input.OldPassword"></label>
                 <input asp-for="Input.OldPassword" class="form-control" />
                 <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label class="other_info" asp-for="Input.NewPassword"></label>
+                <label class="other-info" asp-for="Input.NewPassword"></label>
                 <input asp-for="Input.NewPassword" class="form-control" />
                 <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label class="other_info" asp-for="Input.ConfirmPassword"></label>
+                <label class="other-info" asp-for="Input.ConfirmPassword"></label>
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
