--- a/JDC/Areas/Account/Views/Manage/DeletePersonalData.cshtml
+++ b/JDC/Areas/Account/Views/Manage/DeletePersonalData.cshtml
@@ -16,7 +16,7 @@
         @if (Model.RequirePassword)
         {
             <div class="form-group">
-                <label class="other_info" asp-for="Input.Password"></label>
+                <label class="other-info" asp-for="Input.Password"></label>
                 <input asp-for="Input.Password" class="form-control" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
