--- a/JDC/Areas/Account/Views/Manage/Email.cshtml
+++ b/JDC/Areas/Account/Views/Manage/Email.cshtml
@@ -10,7 +10,7 @@
         <form id="email-form" method="post" asp-action="ChangeEmail">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label class="other_info" asp-for="Email"></label>
+                <label class="other-info" asp-for="Email"></label>
                 @if (Model.IsEmailConfirmed)
                 {
                     <div class="input-group">
@@ -27,7 +27,7 @@
                 }
             </div>
             <div class="form-group">
-                <label class="other_info" asp-for="Input.NewEmail"></label>
+                <label class="other-info" asp-for="Input.NewEmail"></label>
                 <input asp-for="Input.NewEmail" class="form-control" />
                 <span asp-validation-for="Input.NewEmail" class="text-danger"></span>
             </div>
