Added functionality for editing institutions

--- a/JDC/Areas/Admin/Views/Home/Index.cshtml
+++ b/JDC/Areas/Admin/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
                 <div class="text-admin-info display-4 fs-4 mb-2 fw-normal">
                     <span class="counter">23</span>
                 </div>
-                <a class="btn btn-admin-info" asp-area="Admin" asp-controller="Users" asp-action="Index">Просмотреть</a>
+                <a class="btn btn-admin-info" asp-controller="Institutions" asp-action="Index">Просмотреть</a>
             </div>
         </div>
     </div>
