--- a/JDC/Views/Home/Documentation.cshtml
+++ b/JDC/Views/Home/Documentation.cshtml
@@ -34,11 +34,11 @@
         <h2>Свяжитесь с нами</h2>
         <p>Для получения помощи свяжитесь с нами напрямую или заполните форму, и мы оперативно свяжемся с вами.</p>
         <form method="post" asp-action="Contact">
-            <label class="other_info">Ваше имя*</label>
+            <label class="other-info">Ваше имя*</label>
             <input class="form-control mb-4" />
-            <label class="other_info">Email*</label>
+            <label class="other-info">Email*</label>
             <input class="form-control mb-4" />
-            <label class="other_info">Сообщение*</label>
+            <label class="other-info">Сообщение*</label>
             <textarea class="form-control mb-4" rows="3"></textarea>
             <button type="submit" class="mb-5 btn btn-primary btn-lg px-4 mr-3">Отправить сообщение</button>
         </form>
