--- a/JDC/Areas/Admin/Views/Users/Details.cshtml
+++ b/JDC/Areas/Admin/Views/Users/Details.cshtml
@@ -54,57 +54,57 @@
             <div class="user-info-card-body">
                 <form method="post">
                     <div class="form-group">
-                        <label class="other_info" asp-for="UserName">Username</label>
+                        <label class="other-info" asp-for="UserName">Username</label>
                         <input asp-for="UserName" class="form-control" />
                     </div>
 
                     <div class="form-group">
-                        <label class="other_info" asp-for="LastName">Фамилия</label>
+                        <label class="other-info" asp-for="LastName">Фамилия</label>
                         <input asp-for="LastName" class="form-control" />
                     </div>
 
                     <div class="form-group">
-                        <label class="other_info" asp-for="FirstName">Имя</label>
+                        <label class="other-info" asp-for="FirstName">Имя</label>
                         <input asp-for="FirstName" class="form-control" />
                     </div>
 
                     <div class="form-group">
-                        <label class="other_info" asp-for="MiddleName">Отчество</label>
+                        <label class="other-info" asp-for="MiddleName">Отчество</label>
                         <input asp-for="MiddleName" class="form-control" />
                     </div>
 
                     <div class="form-group">
-                        <label class="other_info" asp-for="Email"></label>
+                        <label class="other-info" asp-for="Email"></label>
                         <input asp-for="Email" class="form-control" />
                     </div>
 
                     <div class="form-group">
-                        <label class="other_info" asp-for="PhoneNumber">Номер телефона</label>
+                        <label class="other-info" asp-for="PhoneNumber">Номер телефона</label>
                         <input asp-for="PhoneNumber" class="form-control" />
                     </div>
 
                     <div class="form-group">
-                        <label class="other_info" asp-for="Country">Страна</label>
+                        <label class="other-info" asp-for="Country">Страна</label>
                         <input asp-for="Country" class="form-control" />
                     </div>
 
                     <div class="form-group">
-                        <label class="other_info" asp-for="City">Город</label>
+                        <label class="other-info" asp-for="City">Город</label>
                         <input asp-for="City" class="form-control" />
                     </div>
 
                     <div class="form-group">
-                        <label class="other_info" asp-for="Street">Улица</label>
+                        <label class="other-info" asp-for="Street">Улица</label>
                         <input asp-for="Street" class="form-control" />
                     </div>
 
                     <div class="form-group">
-                        <label class="other_info" asp-for="House">Дом</label>
+                        <label class="other-info" asp-for="House">Дом</label>
                         <input asp-for="House" class="form-control" />
                     </div>
 
                     <div class="form-group">
-                        <label class="other_info" asp-for="Apartment">Квартира</label>
+                        <label class="other-info" asp-for="Apartment">Квартира</label>
                         <input asp-for="Apartment" class="form-control" />
                     </div>
 
