Added charecteristic functionality

--- a/JDC/Views/Groups/Journal.cshtml
+++ b/JDC/Views/Groups/Journal.cshtml
@@ -224,3 +224,5 @@ else
         window.location.href = url.replace('__discipline__', $("#discipline").val());
     });
 </script>
+
+<script src="~/js/journal.js"></script>
